--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Basic Excercise",
   "main": "index.js",
   "scripts": {
-    "build": "sass ./src/scss/styles.scss ./src/css/custom-styles.css --watch && parcel build ./wwwroot/index.html --no-source-maps",
-    "start": "parcel ./wwwroot/index.html --open --port 8080",
+    "build": "sass ./src/scss/styles.scss ./src/css/custom-styles.css --style compressed && parcel build ./wwwroot/index.html --no-source-maps",
+    "start": "sass ./src/scss/styles.scss ./src/css/custom-styles.css --style compressed && parcel ./wwwroot/index.html --open --port 8080",
     "lint": "tslint src/**/*.ts src/**/*.tsx",
     "test": "protractor ./src/Tests/conf.js"
   },
