--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@types/angular": "^1.6.54",
     "angular": "^1.7.8",
+    "angular-font-awesome": "^3.1.2",
     "angular-route": "^1.7.8",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "global": "^4.3.2",
     "jquery": "^3.3.1",
+    "ng-redux": "^4.1.0",
+    "redux": "^4.0.1",
     "sass": "^1.17.3"
   },
   "devDependencies": {
